# custom_compositor

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_DIARY.md  README.md  VALIDATION_PLAN.md  features.md  libwayland.rlib
.github/: copilot-instructions.md
crates/app-bar/: Cargo.toml
crates/app-bar/src/: config.rs  dock.rs  launcher.rs  lib.rs  widgets.rs
crates/compositor-core/: Cargo.toml
crates/compositor-core/src/: backend.rs  input.rs  lib.rs  output.rs  session.rs  surface.rs  surface_manager.rs  wayland.rs  wayland_broken.rs  wayland_new.rs  window.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: dbus.rs  lib.rs  protocol.rs  socket.rs
crates/plugin-system/: Cargo.toml
crates/plugin-system/src/: api.rs  lib.rs  loader.rs  manifest.rs  registry.rs
crates/ui-framework/: Cargo.toml
crates/ui-framework/src/: animation.rs  components.rs  effects.rs  layout.rs  lib.rs  styling.rs
crates/ui-framework/src/components/: button.rs  container.rs  panel.rs  text.rs
crates/utils/: Cargo.toml
crates/utils/src/: async_utils.rs  error.rs  lib.rs  logging.rs  math.rs  memory.rs
crates/vulkan-renderer/: Cargo.toml  README.md  build.rs
crates/vulkan-renderer/src/: buffer.rs  command.rs  compositor_pipeline.rs  compositor_renderer.rs  descriptor.rs  device.rs  image.rs  instance.rs  lib.rs  memory.rs  pipeline.rs  surface.rs  surface_pipeline.rs  surface_renderer.rs  swapchain.rs  sync.rs  tests.rs
crates/vulkan-renderer/src/shaders/: surface.frag  surface.vert
future/: uber_app_bar.md  unity.md
livetest/: README.md  phase1_foundation.sh  phase2_graphics_stack.sh
scripts/: check_traffic.sh
src/: main.rs
