[workspace]
resolver = "2"
members = [
    "crates/compositor-core",
    "crates/vulkan-renderer", 
    "crates/ui-framework",
    "crates/app-bar",
    "crates/plugin-system",
    "crates/config",
    "crates/ipc",
    "crates/utils",
]

# Main binary package
[package]
name = "custom-compositor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Advanced Wayland compositor architecture leveraging Rust systems programming and Vulkan GPU acceleration for ultra-high-resolution desktop environment development"

[[bin]]
name = "custom-compositor"
path = "src/main.rs"

[dependencies]
# Local dependencies
compositor-utils = { path = "crates/utils" }
compositor-core = { path = "crates/compositor-core" }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Shane <shane@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/custom-compositor"
description = "Advanced Wayland compositor architecture leveraging Rust systems programming and Vulkan GPU acceleration for ultra-high-resolution desktop environment development"

[workspace.dependencies]
# Core async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Wayland and window management
smithay = { version = "0.6", features = ["backend_drm", "backend_egl", "backend_libinput", "backend_vulkan", "backend_gbm"] }
wayland-server = "0.31"
wayland-protocols = "0.32"
wayland-protocols-misc = "0.3"
calloop = "0.14"
drm-fourcc = "2.2"

# Vulkan graphics
ash = { version = "0.37", features = ["linked"] }
gpu-allocator = { version = "0.26", features = ["vulkan"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Math and linear algebra for graphics
glam = { version = "0.24", features = ["bytemuck"] }
nalgebra = "0.32"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
toml = "0.8"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# System programming
nix = { version = "0.27", features = ["process", "fs", "mman"] }
libc = "0.2"
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# File system and directories
dirs = "5.0"
notify = "6.1"

# IPC and serialization
bincode = "1.3"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }

# Unix domain sockets - Note: tokio-uds is deprecated, use tokio::net::UnixStream instead
# tokio-uds = "0.2"  # We'll update the IPC crate to use standard tokio instead

# Dynamic loading for plugins
libloading = "0.8"

# Development and testing
tokio-test = "0.4"
tempfile = "3.8"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

# Performance profiling profile
[profile.profiling]
inherits = "release"
debug = 1
strip = "none"
