[package]
name = "compositor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core compositor logic and Wayland protocol handling"

[dependencies]
# Local dependencies
compositor-utils = { path = "../utils" }
vulkan-renderer = { path = "../vulkan-renderer" }

# Wayland
smithay = { workspace = true }
wayland-server = { workspace = true }
wayland-protocols = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Math and graphics
glam = { workspace = true }

# System programming
nix = { workspace = true }

# Utilities
once_cell = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
