[package]
name = "compositor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Advanced compositor engine implementing comprehensive Wayland protocol stack and multi-surface management architecture"

[dependencies]
# Local dependencies
compositor-utils = { path = "../utils" }
vulkan-renderer = { path = "../vulkan-renderer" }

# Wayland
smithay = { workspace = true }
wayland-server = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-misc = { workspace = true }
calloop = { workspace = true }
drm-fourcc = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Math and graphics
glam = { workspace = true }
ash = { workspace = true }

# System programming
nix = { workspace = true }
libseat = { workspace = true }
libc = { workspace = true }

# Utilities
once_cell = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
